[project]
name = "bug-hunter"
version = "0.1.0"
description = ""
authors = [
    {name = "nagutabby",email = "nagutabby@nagutabby.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"

[tool.poetry.group.dev.dependencies]
pandas = "^2.3.0"
matplotlib = "^3.10.3"
scikit-learn = "^1.7.0"
jupyter = "^1.1.1"
japanize-matplotlib = "^1.1.3"
scikit-optimize = "^0.10.2"
tensorflow-io-gcs-filesystem = "^0.37.1"
tensorflow = "^2.19.0"
keras = "^3.10.0"
tensorflow-metal = "^1.2.0"

